# mihari

./: .prettierignore  LICENSE  biome.json  config.html  index.html  mihari.code-workspace  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yaml
src/: App.tsx  Config.tsx  ContextMenuContainer.tsx  ResourceContext.ts  ResourceProvider.tsx  ThemeContext.ts  ThemeProvider.tsx  api.ts  createResourceList.tsx  functions.ts  handleSaveOnConfigChanged.ts  i18n.ts  main.tsx  registerConfigChanged.ts  registerThemeChanged.ts  resource.ts  styles.css  types.ts  useAppConfig.tsx  useRegisterContextMenu.ts  useResourceList.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  core.rs  main.rs  resource.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: Chart.tsx  ChartContext.ts  ChartExperimental.tsx  ChartJsChart.tsx  ChartProps.ts  ChartProvider.tsx  ChartValue.tsx  GoogleChartsChart.tsx  HighchartsChart.tsx  LineChart.tsx  Monitor.tsx  MonitorContainer.tsx  MuiChart.tsx  Panel.tsx  ResourceContext.ts  ResourceLabel.tsx  ResourceMonitor.tsx  ResourceProvider.tsx  ResourceValue.tsx
src/dev/: Chart.tsx  ChartContext.ts  ChartProvider.tsx  ChartValue.tsx  MonitorContainer.tsx  MonitorContext.ts  MonitorProvider.tsx  types.ts
src/pages/: config.tsx  main.css  main.tsx
