[package]
name = "mihari"
version = "0.0.0"
description = "mihari"
authors = ["fmsyt"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [
    "tray-icon",
    "image-png",
    "image-ico",
] }
# tauri-plugin-context-menu = "0.7.1"
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tokio = { version = "1.35.1", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
systemstat = "0.2.3"
sysinfo = "0.30.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
