[package]
name = "mihari"
version = "0.0.0"
description = "mihari"
authors = ["fmsyt"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tokio = { version = "1.35.1", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
systemstat = "0.2.3"
sysinfo = "0.30.7"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
reqwest = { version ="0.12.19", features= ["json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
